5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1592_1800.log
== TEST (2019-04-03 14:41:25) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))
x = ((a**2) + (b**2) + (c**2) )/(a + b +c)
print(round x, 7)
-- ERROR:
File "XXXX", line 5
    print(round x, 7)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:37) 
-- CODE:
a = float(input("a:"))
b = float(input("b:"))
c = float(input("c:"))
x = ((a**2) + (b**2) + (c**2) )/(a + b +c)
print(round x,7)
-- ERROR:
File "XXXX", line 5
    print(round x,7)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:42:21) 
-- CODE:
a = int(input("a:"))
b = int(input("b:"))
c = int(input("c:"))
x = ((a**2) + (b**2) + (c**2) )/(a + b +c)
print(round(x,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:42:30) 
-- CODE:
a = int(input("a:"))
b = int(input("b:"))
c = int(input("c:"))
x = ((a**2) + (b**2) + (c**2) )/(a + b +c)
print(round(x,7))
-- EXECUTION TIME:
0.114542
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
